noinst_LTLIBRARIES = libcore.la

libcore_la_CPPFLAGS = -I${top_srcdir}/nvkm \
		      -I${top_srcdir}/nvkm/include \
		      -I${top_srcdir}/lib

libcore_la_SOURCES = client.c \
		     engctx.c \
		     engine.c \
		     enum.c \
		     event.c \
		     gpuobj.c \
		     handle.c \
		     ioctl.c \
		     mm.c \
		     namedb.c \
		     notify.c \
		     object.c \
		     option.c \
		     parent.c \
		     printk.c \
		     ramht.c \
		     subdev.c
