SUBDIRS = dmaobj bsp copy crypt disp fifo graph mpeg ppp software vp

noinst_LTLIBRARIES = libengine.la

libengine_la_SOURCES =
libengine_la_LIBADD  = dmaobj/libdmaobj.la \
		       bsp/libbsp.la \
		       copy/libcopy.la \
		       crypt/libcrypt.la \
		       disp/libdisp.la \
		       fifo/libfifo.la \
		       graph/libgraph.la \
		       mpeg/libmpeg.la \
		       ppp/libppp.la \
		       software/libsoftware.la \
		       vp/libvp.la
