SUBDIRS = bar bios clock device devinit fb gpio i2c ibus instmem ltcg \
	  mc mxm therm timer vm

noinst_LTLIBRARIES = libsubdev.la

libsubdev_la_SOURCES  =
libsubdev_la_LIBADD   = bar/libbar.la \
			bios/libbios.la \
			clock/libclock.la \
			device/libdevice.la \
			devinit/libdevinit.la \
			fb/libfb.la \
			gpio/libgpio.la \
			i2c/libi2c.la \
			ibus/libibus.la \
			instmem/libinstmem.la \
			ltcg/libltcg.la \
			mc/libmc.la \
			mxm/libmxm.la \
			therm/libtherm.la \
			timer/libtimer.la \
			vm/libvm.la
