SUBDIRS = bar bus bios clock devinit fb fuse gpio i2c ibus instmem \
	  ltc mc mxm pwr therm timer vm volt

noinst_LTLIBRARIES = libsubdev.la

libsubdev_la_SOURCES  =
libsubdev_la_LIBADD   = bar/libbar.la \
			bios/libbios.la \
			bus/libbus.la \
			clock/libclock.la \
			devinit/libdevinit.la \
			fb/libfb.la \
			fuse/libfuse.la \
			gpio/libgpio.la \
			i2c/libi2c.la \
			ibus/libibus.la \
			instmem/libinstmem.la \
			ltc/libltc.la \
			mc/libmc.la \
			mxm/libmxm.la \
			pwr/libpwr.la \
			therm/libtherm.la \
			timer/libtimer.la \
			vm/libvm.la \
			volt/libvolt.la
