noinst_LTLIBRARIES = libdevice.la

libdevice_la_SOURCES = acpi.c \
		       base.c \
		       ctrl.c \
		       nv04.c \
		       nv10.c \
		       nv20.c \
		       nv30.c \
		       nv40.c \
		       nv50.c \
		       nvc0.c \
		       nve0.c \
		       gm100.c

include $(srcdir)/../Makefile.engine
