noinst_LTLIBRARIES = libdisp.la

libdisp_la_SOURCES = base.c \
		     conn.c \
		     outp.c \
		     outpdp.c \
		     nv04.c \
		     nv50.c \
		     nv84.c \
		     nv94.c \
		     nva0.c \
		     nva3.c \
		     nvd0.c \
		     nve0.c \
		     nvf0.c \
		     gm107.c \
		     dacnv50.c \
		     dport.c \
		     hdanva3.c \
		     hdanvd0.c \
		     hdminv84.c \
		     hdminva3.c \
		     hdminvd0.c \
		     hdminve0.c \
		     piornv50.c \
		     sornv50.c \
		     sornv94.c \
		     sornvd0.c \
		     vga.c

include $(srcdir)/../Makefile.engine
