noinst_LTLIBRARIES = libbios.la

libbios_la_SOURCES = base.c \
		     bit.c \
		     conn.c \
		     dcb.c \
		     disp.c \
		     dp.c \
		     extdev.c \
		     gpio.c \
		     i2c.c \
		     init.c \
		     mxm.c \
		     perf.c \
		     pll.c \
		     therm.c

include $(srcdir)/../Makefile.subdev
