noinst_LTLIBRARIES = libbios.la

libbios_la_SOURCES = base.c \
		     bit.c \
		     boost.c \
		     conn.c \
		     cstep.c \
		     dcb.c \
		     disp.c \
		     dp.c \
		     extdev.c \
		     gpio.c \
		     i2c.c \
		     init.c \
		     mxm.c \
		     perf.c \
		     pll.c \
		     ramcfg.c \
		     rammap.c \
		     timing.c \
		     therm.c \
		     vmap.c \
		     volt.c \
		     xpio.c \
		     P0260.c \
		     fan.c

include $(srcdir)/../Makefile.subdev
