noinst_LTLIBRARIES = libbios.la

libbios_la_SOURCES = base.c \
		     bit.c \
		     boost.c \
		     conn.c \
		     cstep.c \
		     dcb.c \
		     disp.c \
		     dp.c \
		     extdev.c \
		     fan.c \
		     gpio.c \
		     i2c.c \
		     image.c \
		     init.c \
		     mxm.c \
		     perf.c \
		     pll.c \
		     ramcfg.c \
		     rammap.c \
		     shadow.c \
		     shadowacpi.c \
		     shadowof.c \
		     shadowpci.c \
		     shadowramin.c \
		     shadowrom.c \
		     timing.c \
		     therm.c \
		     vmap.c \
		     volt.c \
		     xpio.c \
		     M0205.c \
		     M0209.c \
		     P0260.c

include $(srcdir)/../Makefile.subdev
