noinst_LTLIBRARIES = libfb.la

libfb_la_SOURCES = base.c \
		   nv04.c \
		   nv10.c nv1a.c \
		   nv20.c nv25.c \
		   nv30.c nv35.c nv36.c \
		   nv40.c nv41.c nv44.c nv46.c nv47.c nv49.c nv4e.c \
		   nv50.c nv84.c nva3.c nvaa.c nvaf.c \
		   nvc0.c \
		   nve0.c \
		   gk20a.c \
		   gm107.c \
		   ramnv04.c \
		   ramnv10.c \
		   ramnv1a.c \
		   ramnv20.c \
		   ramnv40.c \
		   ramnv41.c \
		   ramnv44.c \
		   ramnv49.c \
		   ramnv4e.c \
		   ramnv50.c \
		   ramnva3.c \
		   ramnvaa.c \
		   ramnvc0.c \
		   ramnve0.c \
		   ramgk20a.c \
		   ramgm107.c \
		   sddr2.c \
		   sddr3.c \
		   gddr5.c


include $(srcdir)/../Makefile.subdev
