noinst_LTLIBRARIES = libtherm.la

libtherm_la_SOURCES = base.c \
		      fan.c \
		      fannil.c \
		      fanpwm.c \
		      fantog.c \
		      ic.c \
		      temp.c \
		      nv40.c \
		      nv50.c \
		      nv84.c \
		      nva3.c \
		      nvd0.c \
		      gm107.c

include $(srcdir)/../Makefile.subdev
